rework on getPatientByFamilyName test + rework on field familyname field